media/css/legal/legal.scss
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

$font-path: '/media/fonts';
$image-path: '/media/protocol/img';

@import '../../protocol/css/components/newsletter-form';
@import '../../protocol/css/components/emphasis-box';
@import '../../protocol/css/components/notification-bar';
@import '../../protocol/css/components/forms/form';
@import '../../protocol/css/components/forms/field';

/* -------------------------------------------------------------------------- */
// Article

.mzp-c-article {
    h1 {
        @include text-title-xl;
    }

    h2 {
        @include text-title-sm;
        margin-top: $spacing-lg;
    }

    h3 {
        @include text-title-xs;
    }
}

.mzp-c-emphasis-box {
    margin-top: $spacing-2xl;
}

.mzp-c-newsletter {
    margin: $spacing-sm;
}


// manual styling for markdown content.
.article-body {
    blockquote {
        @include text-body-lg;
    }

    ul {
        list-style: disc;
    }

    ol {
        list-style: decimal;
    }

    li {
        margin: $spacing-sm $spacing-lg;
    }
}

/* -------------------------------------------------------------------------- */
// Sidebar

.mzp-l-sidebar {
    .mzp-l-menu-note {
        @include text-body-sm;
    }
}

/* -------------------------------------------------------------------------- */
// Form

#outer-wrapper .mzp-c-notification-bar {
    margin-bottom: $spacing-xl;
}

.super-priority-field {
    display: none;
}

